Cleaning up landing page

--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -57,8 +57,13 @@
               path='@hubspot/simple_menu',
               orientation='vertical'
             %}
-              {% module_attribute "menu_tree" is_json=True %}
-                [{'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Our Story', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}, {'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Our Team', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}, {'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Our Mission', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}, {'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Our Vision', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}]
+              {% module_attribute 'menu_tree' is_json=True %}
+                [
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Our Story", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false},
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Our Team", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false},
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Our Mission", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false},
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Our Vision", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}
+                ]
               {% end_module_attribute %}
             {% end_module_block %}
           </div>
@@ -77,8 +82,13 @@
               path='@hubspot/simple_menu',
               orientation='vertical'
             %}
-              {% module_attribute "menu_tree" is_json=True %}
-                [{'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Products', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}, {'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Services', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}, {'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Trainings', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}, {'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Free Trial', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}]
+              {% module_attribute 'menu_tree' is_json=True %}
+                [
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Products", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false},
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Services", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false},
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Trainings", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false},
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Free Trial", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}
+                ]
               {% end_module_attribute %}
             {% end_module_block %}
           </div>
@@ -97,8 +107,12 @@
               path='@hubspot/simple_menu',
               orientation='vertical'
             %}
-              {% module_attribute "menu_tree" is_json=True %}
-                [{'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Help Center', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}, {'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Community', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}, {'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Contact Support', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}, {'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Live Chat', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}]
+              {% module_attribute 'menu_tree' is_json=True %}
+                [
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Help Center", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false},
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Community", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false},
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Contact Support", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false},
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Live Chat", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}]
               {% end_module_attribute %}
             {% end_module_block %}
           </div>
@@ -117,8 +131,13 @@
               path='@hubspot/simple_menu',
               orientation='vertical'
             %}
-              {% module_attribute "menu_tree" is_json=True %}
-                [{'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Blog', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}, {'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Webinars', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}, {'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'Podcast', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}, {'contentType': null, 'subCategory': null, 'pageLinkName': null, 'pageLinkId': null, 'isPublished': false, 'categoryId': null, 'linkParams': null, 'linkLabel': 'eBooks', 'linkTarget': null, 'linkUrl': '#', 'children': [], 'isDeleted': false}]
+              {% module_attribute 'menu_tree' is_json=True %}
+                [
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Blog", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false},
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Webinars", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false},
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "Podcast", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false},
+                  {"contentType": null, "subCategory": null, "pageLinkName": null, "pageLinkId": null, "isPublished": false, "categoryId": null, "linkParams": null, "linkLabel": "eBooks", "linkTarget": null, "linkUrl": "#", "children": [], "isDeleted": false}
+                ]
               {% end_module_attribute %}
             {% end_module_block %}
           </div>
