Making style value for icons lowercase

--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -91,7 +91,7 @@
                 horizontal_alignment='CENTER',
                 icon_type={
                     'name': 'map-pin',
-                    'type': 'SOLID'
+                    'type': 'solid'
                 }
               %}
               {% end_dnd_module %}
@@ -120,7 +120,7 @@
                 horizontal_alignment='CENTER',
                 icon_type={
                     'name': 'phone',
-                    'type': 'SOLID'
+                    'type': 'solid'
                 }
               %}
               {% end_dnd_module %}
@@ -149,7 +149,7 @@
                 horizontal_alignment='CENTER',
                 icon_type={
                     'name': 'envelope',
-                    'type': 'SOLID'
+                    'type': 'solid'
                 }
               %}
               {% end_dnd_module %}
