--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -84,7 +84,7 @@
                 horizontal_alignment='CENTER',
                 icon_type={
                     'name': 'clock',
-                    'type': 'REGULAR'
+                    'type': 'regular'
                 }
               %}
               {% end_dnd_module %}
@@ -112,7 +112,7 @@
                 horizontal_alignment='CENTER',
                 icon_type={
                     'name': 'book',
-                    'type': 'SOLID'
+                    'type': 'solid'
                 }
               %}
               {% end_dnd_module %}
@@ -140,7 +140,7 @@
                 horizontal_alignment='CENTER',
                 icon_type={
                     'name': 'user',
-                    'type': 'SOLID'
+                    'type': 'solid'
                 }
               %}
               {% end_dnd_module %}
