--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -67,7 +67,7 @@
                     {% icon
                       name='tag',
                       purpose='decorative',
-                      style='SOLID'
+                      style='solid'
                     %}
                     {% for tag in content.tag_list %}
                       <a class="blog-card__tag-link" href="{{ blog_tag_url(group.id, tag.slug) }}">{{ tag.name }}</a>
