--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -38,7 +38,7 @@
               {% icon
                 name='tag',
                 purpose='decorative',
-                style='SOLID'
+                style='solid'
               %}
               {% for tag in content.tag_list %}
                 <a class="blog-post__tag-link" href="{{ blog_tag_url(group.id, tag.slug) }}">{{ tag.name }}</a>
