Updated icon module and template references

--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -67,7 +67,7 @@
                     {% icon
                       name='tag',
                       purpose='decorative',
-                      style='solid'
+                      style='SOLID'
                     %}
                     {% for tag in content.tag_list %}
                       <a class="blog-card__tag-link" href="{{ blog_tag_url(group.id, tag.slug) }}">{{ tag.name }}</a>
@@ -107,7 +107,7 @@
               name='chevron-left',
               no_wrapper=True,
               purpose='decorative',
-              style='solid',
+              style='SOLID',
               width='13'
             %}
             Prev
@@ -124,7 +124,7 @@
               name='chevron-right',
               no_wrapper=True,
               purpose='decorative',
-              style='solid',
+              style='SOLID',
               width='13'
             %}
           </a>
