--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -91,8 +91,9 @@
                 horizontal_alignment='CENTER',
                 icon_type={
                     'name': 'map-pin',
-                    'type': 'solid'
-                }
+                    'type': 'SOLID'
+                },
+                purpose="decorative"
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
@@ -120,8 +121,9 @@
                 horizontal_alignment='CENTER',
                 icon_type={
                     'name': 'phone',
-                    'type': 'solid'
-                }
+                    'type': 'SOLID'
+                },
+                purpose="decorative"
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
@@ -149,8 +151,9 @@
                 horizontal_alignment='CENTER',
                 icon_type={
                     'name': 'envelope',
-                    'type': 'solid'
-                }
+                    'type': 'SOLID'
+                },
+                purpose="decorative"
               %}
               {% end_dnd_module %}
               {% end_dnd_row %}
