--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -84,8 +84,9 @@
                 horizontal_alignment='CENTER',
                 icon_type={
                     'name': 'clock',
-                    'type': 'regular'
-                }
+                    'type': 'REGULAR'
+                },
+                purpose="decorative"
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
@@ -112,8 +113,9 @@
                 horizontal_alignment='CENTER',
                 icon_type={
                     'name': 'book',
-                    'type': 'solid'
-                }
+                    'type': 'SOLID'
+                },
+                purpose="decorative"
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
@@ -140,8 +142,9 @@
                 horizontal_alignment='CENTER',
                 icon_type={
                     'name': 'user',
-                    'type': 'solid'
-                }
+                    'type': 'SOLID'
+                },
+                purpose="decorative"
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
