--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -38,7 +38,7 @@
               {% icon
                 name='tag',
                 purpose='decorative',
-                style='solid'
+                style='SOLID'
               %}
               {% for tag in content.tag_list %}
                 <a class="blog-post__tag-link" href="{{ blog_tag_url(group.id, tag.slug) }}">{{ tag.name }}</a>
@@ -61,7 +61,7 @@
                   {% icon
                     name='twitter',
                     purpose='semantic',
-                    style='solid',
+                    style='SOLID',
                     title='Share this blog post on Twitter'
                   %}
                 </a>
@@ -69,7 +69,7 @@
                   {% icon
                     name='facebook-f',
                     purpose='semantic',
-                    style='solid',
+                    style='SOLID',
                     title='Share this blog post on Facebook'
                   %}
                 </a>
@@ -77,7 +77,7 @@
                   {% icon
                     name='linkedin-in',
                     purpose='semantic',
-                    style='solid',
+                    style='SOLID',
                     title='Share this blog post on LinkedIn'
                   %}
                 </a>
@@ -85,7 +85,7 @@
                   {% icon
                     name='envelope',
                     purpose='semantic',
-                    style='solid',
+                    style='SOLID',
                     title='Share this blog post via email'
                   %}
                 </a>
