Fixing up issues in templates

--- a/src/modules/Icon.module/module.css
+++ b/src/modules/Icon.module/module.css
@@ -11,7 +11,7 @@
 .icon svg {
     box-sizing: border-box;
     fill: #34b5e5;
-    height: auto;
+    height: 100px;
     padding: 20px;
     width: 100px;
 }
