--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -89,11 +89,13 @@
               {% dnd_module
                 path='../modules/icon',
                 horizontal_alignment='CENTER',
-                icon_type={
-                    'name': 'map-pin',
-                    'type': 'SOLID'
+                icon={
+                  'name': 'map-pin',
+                  'type': 'SOLID'
                 },
-                purpose="decorative"
+                accessibility={
+                  'purpose': 'decorative'
+                }
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
@@ -119,11 +121,13 @@
               {% dnd_module
                 path='../modules/icon',
                 horizontal_alignment='CENTER',
-                icon_type={
-                    'name': 'phone',
-                    'type': 'SOLID'
+                icon={
+                  'name': 'phone',
+                  'type': 'SOLID'
                 },
-                purpose="decorative"
+                accessibility={
+                  'purpose': 'decorative'
+                }
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
@@ -149,11 +153,13 @@
               {% dnd_module
                 path='../modules/icon',
                 horizontal_alignment='CENTER',
-                icon_type={
-                    'name': 'envelope',
-                    'type': 'SOLID'
+                icon={
+                  'name': 'envelope',
+                  'type': 'SOLID'
                 },
-                purpose="decorative"
+                accessibility={
+                  'purpose': 'decorative'
+                }
               %}
               {% end_dnd_module %}
               {% end_dnd_row %}
