--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -82,11 +82,13 @@
               {% dnd_module
                 path='../modules/icon',
                 horizontal_alignment='CENTER',
-                icon_type={
-                    'name': 'clock',
-                    'type': 'REGULAR'
+                icon={
+                  'name': 'clock',
+                  'type': 'REGULAR'
                 },
-                purpose="decorative"
+                accessibility={
+                  'purpose': 'decorative'
+                }
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
@@ -111,11 +113,13 @@
               {% dnd_module
                 path='../modules/icon',
                 horizontal_alignment='CENTER',
-                icon_type={
-                    'name': 'book',
-                    'type': 'SOLID'
+                icon={
+                  'name': 'book',
+                  'type': 'SOLID'
                 },
-                purpose="decorative"
+                accessibility={
+                  'purpose': 'decorative'
+                }
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
@@ -140,11 +144,13 @@
               {% dnd_module
                 path='../modules/icon',
                 horizontal_alignment='CENTER',
-                icon_type={
-                    'name': 'user',
-                    'type': 'SOLID'
+                icon={
+                  'name': 'user',
+                  'type': 'SOLID'
                 },
-                purpose="decorative"
+                accessibility={
+                  'purpose': 'decorative'
+                }
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
