--- a/src/modules/pillar-menu.module/module.css
+++ b/src/modules/pillar-menu.module/module.css
@@ -1,18 +1,15 @@
-.pillar-navigation__menu {
-    border-radius: 4px;
-    padding: 10px 0;
-}
-
 .pillar-navigation__menu-items {
-    list-style: none;
-    margin: 0;
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
 }
 
 .pillar-navigation__menu-item {
-    font-weight: 600;
-    padding: 10px 0;
+  border-bottom: 1px solid #d0d0d0;
+  margin: 0 0 0.7rem 0;
+  padding: 0 0 0.7rem 0;
 }
 
 .pillar-navigation__menu-item:last-child {
-    border-bottom: none;
+  border-bottom: none;
 }
