Adding colors to certain pillar sections

--- a/src/templates/pillar.html
+++ b/src/templates/pillar.html
@@ -116,8 +116,8 @@
               %}
                 {% module_attribute 'html' %}
                   <div>
-                    <p>One of the first things that we recommend doing is taking notes of the tasks that you're doing on a daily basis over the course of a week. Anything that you find yourself doing more than three times in a week mark with a star.</p>
-                    <p>Not everything that is done more than once can be automated but you should identify what things in your list can be automated.</p>
+                    <p style="color: #fff;">One of the first things that we recommend doing is taking notes of the tasks that you're doing on a daily basis over the course of a week. Anything that you find yourself doing more than three times in a week mark with a star.</p>
+                    <p style="color: #fff;">Not everything that is done more than once can be automated but you should identify what things in your list can be automated.</p>
                   </div>
                 {% end_module_attribute %}
               {% end_dnd_module %}
@@ -218,8 +218,8 @@
               %}
                 {% module_attribute 'html' %}
                   <div>
-                    <p>Once you know what you can automate and what you should automate, you'll want to look into how you can automate it. There is a lot of software out there that can help with this.</p>
-                    <p>We'd recommend giving our software a try. Contact us today for a free extended trial.</p>
+                    <p style="color: #fff;">Once you know what you can automate and what you should automate, you'll want to look into how you can automate it. There is a lot of software out there that can help with this.</p>
+                    <p style="color: #fff;">We'd recommend giving our software a try. Contact us today for a free extended trial.</p>
                   </div>
                 {% end_module_attribute %}
               {% end_dnd_module %}
