Update pillar title module

--- a/src/templates/pillar.html
+++ b/src/templates/pillar.html
@@ -106,6 +106,7 @@
               {% dnd_module
                 path='../modules/pillar-section-title',
                 horizontal_alignment='LEFT',
+                override_default_style=true,
                 pillar_section_title='What Can I Automate?'
               %}
               {% end_dnd_module %}
