--- a/src/templates/pillar.html
+++ b/src/templates/pillar.html
@@ -107,8 +107,16 @@
                 path='../modules/pillar-section-title',
                 horizontal_alignment='LEFT',
                 override_default_style=true,
-                pillar_section_title='What Can I Automate?'
+                title='What Can I Automate?'
               %}
+              {% module_attribute 'style' is_json=True %}
+                {
+                  "color": {
+                    "color": "#ffffff",
+                    "opacity": "100"
+                  }
+                }
+              {% end_module_attribute %}
               {% end_dnd_module %}
             {% end_dnd_row %}
             {% dnd_row %}
@@ -141,7 +149,7 @@
               {% dnd_module
                 path='../modules/pillar-section-title',
                 horizontal_alignment='LEFT',
-                pillar_section_title='What Should I Not Automate?'
+                title='What Should I Not Automate?'
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
@@ -209,8 +217,17 @@
               {% dnd_module
                 path='../modules/pillar-section-title',
                 horizontal_alignment='LEFT',
-                pillar_section_title='How Can I Automate It?'
+                override_default_style=true,
+                title='How Can I Automate It?'
               %}
+              {% module_attribute 'style' is_json=True %}
+                {
+                  "color": {
+                    "color": "#ffffff",
+                    "opacity": "100"
+                  }
+                }
+              {% end_module_attribute %}
               {% end_dnd_module %}
             {% end_dnd_row %}
             {% dnd_row %}
@@ -243,7 +260,7 @@
               {% dnd_module
                 path='../modules/pillar-section-title',
                 horizontal_alignment='LEFT',
-                pillar_section_title='How Do I Track Results?'
+                title='How Do I Track Results?'
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
