Fixing blog listing banner image on blog template

--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -13,7 +13,7 @@
     {# Blog Listing Banner #}
     {% module 'blog_listing_banner'
       path='../modules/blog-listing-banner',
-      blog_listing_banner_image={
+      banner_image={
         'src': get_asset_url('../images/blog-banner.png')
       }
     %}
