Fixing issue on blog template based on module field name change

--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -13,7 +13,7 @@
     {# Blog Post Banner #}
     {% module 'blog_post_banner'
       path='../modules/blog-post-banner',
-      custom_bg_image={
+      bg_image={
         'src': get_asset_url('../images/blog-post-banner.png')
       }
     %}
